--- a/Front - Proyecto/src/Biologo/output.css
+++ b/Front - Proyecto/src/Biologo/output.css
@@ -564,12 +564,20 @@ video {
   left: 2.5rem;
 }
 
+.left-16 {
+  left: 4rem;
+}
+
 .left-5 {
   left: 1.25rem;
 }
 
 .right-0 {
   right: 0px;
+}
+
+.right-36 {
+  right: 9rem;
 }
 
 .top-12 {
@@ -586,6 +594,10 @@ video {
 
 .top-36 {
   top: 9rem;
+}
+
+.top-40 {
+  top: 10rem;
 }
 
 .top-\[108px\] {
@@ -616,28 +628,48 @@ video {
   top: 4rem;
 }
 
-.right-10 {
-  right: 2.5rem;
+.left-1 {
+  left: 0.25rem;
 }
 
-.right-16 {
-  right: 4rem;
+.top-2 {
+  top: 0.5rem;
 }
 
-.right-32 {
-  right: 8rem;
+.top-1 {
+  top: 0.25rem;
 }
 
-.left-16 {
-  left: 4rem;
+.right-1 {
+  right: 0.25rem;
 }
 
-.left-20 {
-  left: 5rem;
+.right-2 {
+  right: 0.5rem;
 }
 
-.right-36 {
-  right: 9rem;
+.right-4 {
+  right: 1rem;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
+.right-3 {
+  right: 0.75rem;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-4 {
+  top: 1rem;
 }
 
 .z-\[1\] {
@@ -648,12 +680,44 @@ video {
   z-index: 2;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
 .float-right {
   float: right;
 }
 
+.float-left {
+  float: left;
+}
+
+.-ml-36 {
+  margin-left: -9rem;
+}
+
+.-ml-4 {
+  margin-left: -1rem;
+}
+
+.-ml-6 {
+  margin-left: -1.5rem;
+}
+
+.-ml-\[6px\] {
+  margin-left: -6px;
+}
+
 .-mt-2 {
   margin-top: -0.5rem;
+}
+
+.-mt-3 {
+  margin-top: -0.75rem;
 }
 
 .mb-2 {
@@ -662,6 +726,10 @@ video {
 
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .mb-5 {
@@ -674,6 +742,10 @@ video {
 
 .mb-\[10px\] {
   margin-bottom: 10px;
+}
+
+.ml-0 {
+  margin-left: 0px;
 }
 
 .ml-10 {
@@ -694,6 +766,10 @@ video {
 
 .ml-3 {
   margin-left: 0.75rem;
+}
+
+.ml-32 {
+  margin-left: 8rem;
 }
 
 .ml-4 {
@@ -732,8 +808,20 @@ video {
   margin-left: 9rem;
 }
 
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
 .mr-10 {
   margin-right: 2.5rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
 }
 
 .mr-4 {
@@ -744,8 +832,8 @@ video {
   margin-right: 1.25rem;
 }
 
-.mt-0 {
-  margin-top: 0px;
+.mr-8 {
+  margin-right: 2rem;
 }
 
 .mt-1 {
@@ -788,6 +876,10 @@ video {
   margin-top: 2px;
 }
 
+.mt-\[3px\] {
+  margin-top: 3px;
+}
+
 .mt-\[4px\] {
   margin-top: 4px;
 }
@@ -802,10 +894,6 @@ video {
 
 .mt-\[9\.6rem\] {
   margin-top: 9.6rem;
-}
-
-.mr-40 {
-  margin-right: 10rem;
 }
 
 .box-border {
@@ -824,12 +912,24 @@ video {
   display: flex;
 }
 
+.table {
+  display: table;
+}
+
 .grid {
   display: grid;
 }
 
 .hidden {
   display: none;
+}
+
+.h-28 {
+  height: 7rem;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .h-5 {
@@ -852,8 +952,16 @@ video {
   height: 10px;
 }
 
+.h-\[120px\] {
+  height: 120px;
+}
+
 .h-\[2\.5rem\] {
   height: 2.5rem;
+}
+
+.h-\[20px\] {
+  height: 20px;
 }
 
 .h-\[220px\] {
@@ -888,12 +996,32 @@ video {
   height: 100vh;
 }
 
+.h-60 {
+  height: 15rem;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
 .max-h-\[220px\] {
   max-height: 220px;
 }
 
+.min-h-\[36rem\] {
+  min-height: 36rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
 .w-48 {
   width: 12rem;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-52 {
@@ -904,16 +1032,44 @@ video {
   width: 1.5rem;
 }
 
+.w-60 {
+  width: 15rem;
+}
+
 .w-64 {
   width: 16rem;
+}
+
+.w-9 {
+  width: 2.25rem;
 }
 
 .w-\[10rem\] {
   width: 10rem;
 }
 
+.w-\[11rem\] {
+  width: 11rem;
+}
+
+.w-\[12rem\] {
+  width: 12rem;
+}
+
+.w-\[13rem\] {
+  width: 13rem;
+}
+
 .w-\[15\.9rem\] {
   width: 15.9rem;
+}
+
+.w-\[20px\] {
+  width: 20px;
+}
+
+.w-\[348px\] {
+  width: 348px;
 }
 
 .w-\[350px\] {
@@ -924,8 +1080,20 @@ video {
   width: 42px;
 }
 
+.w-\[4rem\] {
+  width: 4rem;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
 .w-\[8rem\] {
   width: 8rem;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .w-full {
@@ -936,12 +1104,20 @@ video {
   width: 100vw;
 }
 
+.w-72 {
+  width: 18rem;
+}
+
 .min-w-full {
   min-width: 100%;
 }
 
 .max-w-\[280px\] {
   max-width: 280px;
+}
+
+.max-w-\[40rem\] {
+  max-width: 40rem;
 }
 
 .cursor-pointer {
@@ -972,12 +1148,16 @@ video {
   justify-content: space-around;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
 .overflow-hidden {
   overflow: hidden;
+}
+
+.text-balance {
+  text-wrap: balance;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-\[10px\] {
@@ -1009,12 +1189,21 @@ video {
   border-top-right-radius: 0.75rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-2 {
   border-width: 2px;
 }
 
 .border-\[1\.5px\] {
   border-width: 1.5px;
+}
+
+.border-y-2 {
+  border-top-width: 2px;
+  border-bottom-width: 2px;
 }
 
 .border-none {
@@ -1066,6 +1255,29 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-\[\] {
+  background-color: ;
+}
+
+.bg-\[\#8bb5c8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 181 200 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1091,9 +1303,27 @@ video {
   padding: 0.5;
 }
 
+.p-0 {
+  padding: 0px;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-2 {
@@ -1101,8 +1331,16 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
 }
 
 .text-2xl {
@@ -1144,8 +1382,22 @@ video {
   line-height: 1.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-\[\#241111\] {
@@ -1173,9 +1425,33 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.hover\:bg-\[\#2e5c5c\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(46 92 92 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#47917c\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(71 145 124 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#7EBBAA\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(126 187 170 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#D7EFFF\]:hover {
@@ -1205,6 +1481,11 @@ video {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.active\:bg-\[\#4b927e\]:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 146 126 / var(--tw-bg-opacity));
 }
 
 @media (min-width: 640px) {
@@ -1240,6 +1521,10 @@ video {
 
   .md\:ml-8 {
     margin-left: 2rem;
+  }
+
+  .md\:ml-\[20rem\] {
+    margin-left: 20rem;
   }
 
   .md\:ml-\[21rem\] {
@@ -1347,6 +1632,10 @@ video {
     top: 86px;
   }
 
+  .lg\:-mt-16 {
+    margin-top: -4rem;
+  }
+
   .lg\:-mt-6 {
     margin-top: -1.5rem;
   }
@@ -1391,10 +1680,6 @@ video {
     margin-top: 4px;
   }
 
-  .lg\:ml-\[10rem\] {
-    margin-left: 10rem;
-  }
-
   .lg\:block {
     display: block;
   }
@@ -1431,6 +1716,10 @@ video {
     width: 30rem;
   }
 
+  .lg\:w-\[32rem\] {
+    width: 32rem;
+  }
+
   .lg\:w-\[350px\] {
     width: 350px;
   }
@@ -1441,6 +1730,10 @@ video {
 
   .lg\:w-\[64px\] {
     width: 64px;
+  }
+
+  .lg\:w-\[90\%\] {
+    width: 90%;
   }
 
   .lg\:min-w-\[20rem\] {
@@ -1494,6 +1787,10 @@ video {
     margin-left: 24px;
   }
 
+  .xl\:ml-\[30rem\] {
+    margin-left: 30rem;
+  }
+
   .xl\:ml-\[31rem\] {
     margin-left: 31rem;
   }
@@ -1518,12 +1815,12 @@ video {
     margin-top: 3.5rem;
   }
 
-  .xl\:mt-9 {
-    margin-top: 2.25rem;
+  .xl\:mt-4 {
+    margin-top: 1rem;
   }
 
-  .xl\:ml-\[24rem\] {
-    margin-left: 24rem;
+  .xl\:mt-9 {
+    margin-top: 2.25rem;
   }
 
   .xl\:block {
@@ -1540,6 +1837,10 @@ video {
 
   .xl\:h-6 {
     height: 1.5rem;
+  }
+
+  .xl\:h-\[170px\] {
+    height: 170px;
   }
 
   .xl\:h-\[300px\] {
@@ -1604,6 +1905,10 @@ video {
 
   .xl\:p-2 {
     padding: 0.5rem;
+  }
+
+  .xl\:p-4 {
+    padding: 1rem;
   }
 
   .xl\:text-\[14px\] {
