--- a/Front - Proyecto/src/Biologo/output.css
+++ b/Front - Proyecto/src/Biologo/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.0 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -544,6 +544,14 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.visible {
+  visibility: visible;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
 .fixed {
   position: fixed;
 }
@@ -554,6 +562,10 @@ video {
 
 .relative {
   position: relative;
+}
+
+.-left-10 {
+  left: -2.5rem;
 }
 
 .bottom-0 {
@@ -584,6 +596,10 @@ video {
   top: 3rem;
 }
 
+.top-16 {
+  top: 4rem;
+}
+
 .top-28 {
   top: 7rem;
 }
@@ -598,6 +614,10 @@ video {
 
 .top-40 {
   top: 10rem;
+}
+
+.top-8 {
+  top: 2rem;
 }
 
 .top-\[108px\] {
@@ -628,36 +648,12 @@ video {
   top: 4rem;
 }
 
-.left-1 {
-  left: 0.25rem;
-}
-
-.top-2 {
-  top: 0.5rem;
+.right-3 {
+  right: 0.75rem;
 }
 
 .top-1 {
   top: 0.25rem;
-}
-
-.right-1 {
-  right: 0.25rem;
-}
-
-.right-2 {
-  right: 0.5rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.left-2 {
-  left: 0.5rem;
-}
-
-.right-3 {
-  right: 0.75rem;
 }
 
 .left-0 {
@@ -668,8 +664,12 @@ video {
   top: 0px;
 }
 
-.top-4 {
-  top: 1rem;
+.right-\[25rem\] {
+  right: 25rem;
+}
+
+.top-\[6\.5rem\] {
+  top: 6.5rem;
 }
 
 .z-\[1\] {
@@ -692,32 +692,16 @@ video {
   float: right;
 }
 
-.float-left {
-  float: left;
+.m-4 {
+  margin: 1rem;
 }
 
-.-ml-36 {
-  margin-left: -9rem;
-}
-
-.-ml-4 {
-  margin-left: -1rem;
-}
-
-.-ml-6 {
-  margin-left: -1.5rem;
-}
-
-.-ml-\[6px\] {
-  margin-left: -6px;
+.m-5 {
+  margin: 1.25rem;
 }
 
 .-mt-2 {
   margin-top: -0.5rem;
-}
-
-.-mt-3 {
-  margin-top: -0.75rem;
 }
 
 .mb-2 {
@@ -808,10 +792,6 @@ video {
   margin-left: 9rem;
 }
 
-.mr-1 {
-  margin-right: 0.25rem;
-}
-
 .mr-10 {
   margin-right: 2.5rem;
 }
@@ -834,6 +814,10 @@ video {
 
 .mr-8 {
   margin-right: 2rem;
+}
+
+.mt-0 {
+  margin-top: 0px;
 }
 
 .mt-1 {
@@ -876,10 +860,6 @@ video {
   margin-top: 2px;
 }
 
-.mt-\[3px\] {
-  margin-top: 3px;
-}
-
 .mt-\[4px\] {
   margin-top: 4px;
 }
@@ -894,6 +874,38 @@ video {
 
 .mt-\[9\.6rem\] {
   margin-top: 9.6rem;
+}
+
+.-ml-36 {
+  margin-left: -9rem;
+}
+
+.-mt-3 {
+  margin-top: -0.75rem;
+}
+
+.-ml-40 {
+  margin-left: -10rem;
+}
+
+.-ml-44 {
+  margin-left: -11rem;
+}
+
+.-ml-5 {
+  margin-left: -1.25rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
+.mr-\[10rem\] {
+  margin-right: 10rem;
 }
 
 .box-border {
@@ -996,12 +1008,28 @@ video {
   height: 100vh;
 }
 
-.h-60 {
-  height: 15rem;
+.h-10 {
+  height: 2.5rem;
 }
 
-.h-52 {
-  height: 13rem;
+.h-16 {
+  height: 4rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-44 {
+  height: 11rem;
+}
+
+.h-\[28rem\] {
+  height: 28rem;
+}
+
+.h-px {
+  height: 1px;
 }
 
 .max-h-\[220px\] {
@@ -1040,20 +1068,8 @@ video {
   width: 16rem;
 }
 
-.w-9 {
-  width: 2.25rem;
-}
-
 .w-\[10rem\] {
   width: 10rem;
-}
-
-.w-\[11rem\] {
-  width: 11rem;
-}
-
-.w-\[12rem\] {
-  width: 12rem;
 }
 
 .w-\[13rem\] {
@@ -1080,10 +1096,6 @@ video {
   width: 42px;
 }
 
-.w-\[4rem\] {
-  width: 4rem;
-}
-
 .w-\[50\%\] {
   width: 50%;
 }
@@ -1104,8 +1116,44 @@ video {
   width: 100vw;
 }
 
-.w-72 {
-  width: 18rem;
+.w-\[11rem\] {
+  width: 11rem;
+}
+
+.w-\[12rem\] {
+  width: 12rem;
+}
+
+.w-\[15rem\] {
+  width: 15rem;
+}
+
+.w-\[14rem\] {
+  width: 14rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .min-w-full {
@@ -1134,6 +1182,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -1184,6 +1236,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-t-xl {
   border-top-left-radius: 0.75rem;
   border-top-right-radius: 0.75rem;
@@ -1201,13 +1257,26 @@ video {
   border-width: 1.5px;
 }
 
+.border-0 {
+  border-width: 0px;
+}
+
 .border-y-2 {
   border-top-width: 2px;
   border-bottom-width: 2px;
 }
 
+.border-t-0 {
+  border-top-width: 0px;
+}
+
 .border-none {
   border-style: none;
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .border-gray-300 {
@@ -1218,6 +1287,11 @@ video {
 .border-slate-300 {
   --tw-border-opacity: 1;
   border-color: rgb(203 213 225 / var(--tw-border-opacity));
+}
+
+.border-slate-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(100 116 139 / var(--tw-border-opacity));
 }
 
 .bg-\[\#276B58\] {
@@ -1255,23 +1329,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[\#8bb5c8\] {
+.bg-\[\#4b927e\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(139 181 200 / var(--tw-bg-opacity));
+  background-color: rgb(75 146 126 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -1303,17 +1368,8 @@ video {
   padding: 0.5;
 }
 
-.p-0 {
-  padding: 0px;
-}
-
-.p-8 {
-  padding: 2rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.p-10 {
+  padding: 2.5rem;
 }
 
 .px-4 {
@@ -1321,18 +1377,31 @@ video {
   padding-right: 1rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .pl-3 {
   padding-left: 0.75rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -1387,11 +1456,6 @@ video {
   line-height: 1.25rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1425,18 +1489,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.underline {
+  text-decoration-line: underline;
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .hover\:bg-\[\#2e5c5c\]:hover {
@@ -1464,6 +1524,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 .hover\:text-\[\#276B58\]:hover {
   --tw-text-opacity: 1;
   color: rgb(39 107 88 / var(--tw-text-opacity));
@@ -1488,7 +1553,16 @@ video {
   background-color: rgb(75 146 126 / var(--tw-bg-opacity));
 }
 
+.active\:bg-\[\#276B58\]:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 107 88 / var(--tw-bg-opacity));
+}
+
 @media (min-width: 640px) {
+  .sm\:flex {
+    display: flex;
+  }
+
   .sm\:w-9\/12 {
     width: 75%;
   }
@@ -1549,6 +1623,10 @@ video {
 
   .md\:block {
     display: block;
+  }
+
+  .md\:flex {
+    display: flex;
   }
 
   .md\:hidden {
@@ -1696,6 +1774,10 @@ video {
     height: 64px;
   }
 
+  .lg\:h-6 {
+    height: 1.5rem;
+  }
+
   .lg\:max-h-\[370px\] {
     max-height: 370px;
   }
@@ -1736,6 +1818,14 @@ video {
     width: 90%;
   }
 
+  .lg\:w-60 {
+    width: 15rem;
+  }
+
+  .lg\:w-6 {
+    width: 1.5rem;
+  }
+
   .lg\:min-w-\[20rem\] {
     min-width: 20rem;
   }
@@ -1772,9 +1862,26 @@ video {
   .lg\:text-\[12px\] {
     font-size: 12px;
   }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
 }
 
 @media (min-width: 1280px) {
+  .xl\:-left-10 {
+    left: -2.5rem;
+  }
+
+  .xl\:top-16 {
+    top: 4rem;
+  }
+
+  .xl\:top-8 {
+    top: 2rem;
+  }
+
   .xl\:ml-10 {
     margin-left: 2.5rem;
   }
@@ -1827,6 +1934,10 @@ video {
     display: block;
   }
 
+  .xl\:flex {
+    display: flex;
+  }
+
   .xl\:hidden {
     display: none;
   }
@@ -1837,6 +1948,10 @@ video {
 
   .xl\:h-6 {
     height: 1.5rem;
+  }
+
+  .xl\:h-8 {
+    height: 2rem;
   }
 
   .xl\:h-\[170px\] {
@@ -1865,6 +1980,10 @@ video {
 
   .xl\:w-6 {
     width: 1.5rem;
+  }
+
+  .xl\:w-60 {
+    width: 15rem;
   }
 
   .xl\:w-\[32rem\] {
@@ -1919,6 +2038,11 @@ video {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
+
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1536px) {
@@ -1956,5 +2080,12 @@ video {
 
   .\32xl\:flex-shrink-0 {
     flex-shrink: 0;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .dark\:bg-gray-600 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(75 85 99 / var(--tw-bg-opacity));
   }
 }
