--- a/Front - Proyecto/src/Biologo/output.css
+++ b/Front - Proyecto/src/Biologo/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.0 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -544,6 +544,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.pointer-events-auto {
+  pointer-events: auto;
+}
+
 .visible {
   visibility: visible;
 }
@@ -564,6 +568,10 @@ video {
   position: relative;
 }
 
+.-top-28 {
+  top: -7rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -576,10 +584,6 @@ video {
   left: 2.5rem;
 }
 
-.left-16 {
-  left: 4rem;
-}
-
 .left-5 {
   left: 1.25rem;
 }
@@ -590,10 +594,6 @@ video {
 
 .right-3 {
   right: 0.75rem;
-}
-
-.right-36 {
-  right: 9rem;
 }
 
 .right-\[25rem\] {
@@ -612,6 +612,10 @@ video {
   top: 3rem;
 }
 
+.top-24 {
+  top: 6rem;
+}
+
 .top-28 {
   top: 7rem;
 }
@@ -624,12 +628,12 @@ video {
   top: 9rem;
 }
 
-.top-40 {
-  top: 10rem;
+.top-48 {
+  top: 12rem;
 }
 
-.top-\[108px\] {
-  top: 108px;
+.top-8 {
+  top: 2rem;
 }
 
 .top-\[13\.3px\] {
@@ -668,6 +672,14 @@ video {
   z-index: 20;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
+.z-\[10\] {
+  z-index: 10;
+}
+
 .z-\[1\] {
   z-index: 1;
 }
@@ -676,8 +688,28 @@ video {
   z-index: 2;
 }
 
+.z-\[7\] {
+  z-index: 7;
+}
+
+.z-\[8\] {
+  z-index: 8;
+}
+
 .float-right {
   float: right;
+}
+
+.m-0 {
+  margin: 0px;
+}
+
+.m-1 {
+  margin: 0.25rem;
+}
+
+.m-3 {
+  margin: 0.75rem;
 }
 
 .m-4 {
@@ -688,18 +720,25 @@ video {
   margin: 1.25rem;
 }
 
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+.-ml-28 {
+  margin-left: -7rem;
+}
+
+.-ml-32 {
+  margin-left: -8rem;
 }
 
 .-ml-36 {
   margin-left: -9rem;
+}
+
+.-ml-4 {
+  margin-left: -1rem;
 }
 
 .-ml-44 {
@@ -710,12 +749,20 @@ video {
   margin-left: -1.25rem;
 }
 
-.-mt-2 {
-  margin-top: -0.5rem;
+.-ml-6 {
+  margin-left: -1.5rem;
+}
+
+.-ml-\[6px\] {
+  margin-left: -6px;
 }
 
 .-mt-3 {
   margin-top: -0.75rem;
+}
+
+.-mt-5 {
+  margin-top: -1.25rem;
 }
 
 .mb-2 {
@@ -738,12 +785,20 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .mb-\[10px\] {
   margin-bottom: 10px;
 }
 
 .ml-0 {
   margin-left: 0px;
+}
+
+.ml-0\.5 {
+  margin-left: 0.125rem;
 }
 
 .ml-1 {
@@ -794,6 +849,10 @@ video {
   margin-left: 2rem;
 }
 
+.ml-80 {
+  margin-left: 20rem;
+}
+
 .ml-9 {
   margin-left: 2.25rem;
 }
@@ -806,8 +865,16 @@ video {
   margin-left: 2px;
 }
 
+.ml-\[6px\] {
+  margin-left: 6px;
+}
+
 .ml-\[9rem\] {
   margin-left: 9rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
 }
 
 .mr-10 {
@@ -862,12 +929,20 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-24 {
+  margin-top: 6rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
 
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mt-40 {
+  margin-top: 10rem;
 }
 
 .mt-5 {
@@ -882,8 +957,16 @@ video {
   margin-top: 1.75rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .mt-\[2px\] {
   margin-top: 2px;
+}
+
+.mt-\[3px\] {
+  margin-top: 3px;
 }
 
 .mt-\[4px\] {
@@ -894,16 +977,16 @@ video {
   margin-top: 5px;
 }
 
+.mt-\[7rem\] {
+  margin-top: 7rem;
+}
+
 .mt-\[8rem\] {
   margin-top: 8rem;
 }
 
 .mt-\[9\.6rem\] {
   margin-top: 9.6rem;
-}
-
-.mr-0 {
-  margin-right: 0px;
 }
 
 .box-border {
@@ -924,6 +1007,10 @@ video {
 
 .table {
   display: table;
+}
+
+.table-row {
+  display: table-row;
 }
 
 .grid {
@@ -948,6 +1035,10 @@ video {
 
 .h-20 {
   height: 5rem;
+}
+
+.h-24 {
+  height: 6rem;
 }
 
 .h-28 {
@@ -986,6 +1077,10 @@ video {
   height: 120px;
 }
 
+.h-\[18px\] {
+  height: 18px;
+}
+
 .h-\[2\.5rem\] {
   height: 2.5rem;
 }
@@ -996,6 +1091,10 @@ video {
 
 .h-\[220px\] {
   height: 220px;
+}
+
+.h-\[23px\] {
+  height: 23px;
 }
 
 .h-\[28rem\] {
@@ -1022,6 +1121,10 @@ video {
   height: 68px;
 }
 
+.h-auto {
+  height: auto;
+}
+
 .h-full {
   height: 100%;
 }
@@ -1038,20 +1141,48 @@ video {
   max-height: 220px;
 }
 
+.max-h-\[40vh\] {
+  max-height: 40vh;
+}
+
+.min-h-\[35rem\] {
+  min-height: 35rem;
+}
+
 .min-h-\[36rem\] {
   min-height: 36rem;
+}
+
+.min-h-lvh {
+  min-height: 100lvh;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-10 {
   width: 2.5rem;
 }
 
+.w-11\/12 {
+  width: 91.666667%;
+}
+
 .w-12 {
   width: 3rem;
 }
 
+.w-14 {
+  width: 3.5rem;
+}
+
 .w-16 {
   width: 4rem;
+}
+
+.w-24 {
+  width: 6rem;
 }
 
 .w-28 {
@@ -1090,12 +1221,20 @@ video {
   width: 16rem;
 }
 
+.w-7 {
+  width: 1.75rem;
+}
+
 .w-8 {
   width: 2rem;
 }
 
 .w-80 {
   width: 20rem;
+}
+
+.w-9 {
+  width: 2.25rem;
 }
 
 .w-96 {
@@ -1118,8 +1257,16 @@ video {
   width: 15.9rem;
 }
 
+.w-\[18px\] {
+  width: 18px;
+}
+
 .w-\[20px\] {
   width: 20px;
+}
+
+.w-\[25px\] {
+  width: 25px;
 }
 
 .w-\[348px\] {
@@ -1134,12 +1281,28 @@ video {
   width: 42px;
 }
 
-.w-\[50\%\] {
-  width: 50%;
+.w-\[4rem\] {
+  width: 4rem;
+}
+
+.w-\[6\.5rem\] {
+  width: 6.5rem;
+}
+
+.w-\[6rem\] {
+  width: 6rem;
+}
+
+.w-\[80\%\] {
+  width: 80%;
 }
 
 .w-\[8rem\] {
   width: 8rem;
+}
+
+.w-\[9rem\] {
+  width: 9rem;
 }
 
 .w-auto {
@@ -1158,6 +1321,18 @@ video {
   min-width: 100%;
 }
 
+.max-w-40 {
+  max-width: 10rem;
+}
+
+.max-w-52 {
+  max-width: 13rem;
+}
+
+.max-w-64 {
+  max-width: 16rem;
+}
+
 .max-w-\[280px\] {
   max-width: 280px;
 }
@@ -1166,8 +1341,20 @@ video {
   max-width: 40rem;
 }
 
+.max-w-none {
+  max-width: none;
+}
+
+.border-collapse {
+  border-collapse: collapse;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.resize {
+  resize: both;
 }
 
 .flex-row {
@@ -1176,10 +1363,6 @@ video {
 
 .flex-col {
   flex-direction: column;
-}
-
-.items-end {
-  align-items: flex-end;
 }
 
 .items-center {
@@ -1198,8 +1381,42 @@ video {
   justify-content: space-around;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-visible {
+  overflow: visible;
+}
+
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
+.whitespace-break-spaces {
+  white-space: break-spaces;
+}
+
+.text-balance {
+  text-wrap: balance;
+}
+
+.break-words {
+  overflow-wrap: break-word;
 }
 
 .rounded {
@@ -1228,6 +1445,10 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
 .rounded-xl {
@@ -1260,12 +1481,21 @@ video {
   border-bottom-width: 2px;
 }
 
+.border-b-\[15px\] {
+  border-bottom-width: 15px;
+}
+
 .border-t-0 {
   border-top-width: 0px;
 }
 
 .border-none {
   border-style: none;
+}
+
+.border-\[\#F0F9FF\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(240 249 255 / var(--tw-border-opacity));
 }
 
 .border-black {
@@ -1288,33 +1518,9 @@ video {
   border-color: rgb(100 116 139 / var(--tw-border-opacity));
 }
 
-.border-\[\#\] {
-  border-color: #;
-}
-
-.border-\[\#393939\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(57 57 57 / var(--tw-border-opacity));
-}
-
-.border-gray-800 {
-  --tw-border-opacity: 1;
-  border-color: rgb(31 41 55 / var(--tw-border-opacity));
-}
-
-.border-gray-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(75 85 99 / var(--tw-border-opacity));
-}
-
-.border-gray-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
-}
-
-.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+.bg-\[\#184136\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 65 54 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#276B58\] {
@@ -1327,9 +1533,24 @@ video {
   background-color: rgb(75 146 126 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#747373\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(116 115 115 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#7EBBAA\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(126 187 170 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#D7EFFF\] {
   --tw-bg-opacity: 1;
   background-color: rgb(215 239 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F0F9FF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 249 255 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#F0FEF8\] {
@@ -1362,16 +1583,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#99E0FF\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(153 224 255 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1379,6 +1590,10 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-0 {
+  padding: 0px;
 }
 
 .p-1 {
@@ -1405,10 +1620,6 @@ video {
   padding: 0.5;
 }
 
-.p-5 {
-  padding: 1.25rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1417,6 +1628,26 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
 .py-1 {
@@ -1429,8 +1660,12 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.pl-3 {
-  padding-left: 0.75rem;
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-7 {
+  padding-left: 1.75rem;
 }
 
 .text-left {
@@ -1475,8 +1710,16 @@ video {
   font-size: 13px;
 }
 
+.text-\[14px\] {
+  font-size: 14px;
+}
+
 .text-\[16px\] {
   font-size: 16px;
+}
+
+.text-\[2rem\] {
+  font-size: 2rem;
 }
 
 .text-lg {
@@ -1489,9 +1732,9 @@ video {
   line-height: 1.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
@@ -1507,9 +1750,29 @@ video {
   color: rgb(36 17 17 / var(--tw-text-opacity));
 }
 
+.text-\[\#276B58\] {
+  --tw-text-opacity: 1;
+  color: rgb(39 107 88 / var(--tw-text-opacity));
+}
+
+.text-\[\#302f2f\] {
+  --tw-text-opacity: 1;
+  color: rgb(48 47 47 / var(--tw-text-opacity));
+}
+
+.text-\[\#545151\] {
+  --tw-text-opacity: 1;
+  color: rgb(84 81 81 / var(--tw-text-opacity));
+}
+
 .text-\[\#FFFFFF\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .text-gray-400 {
@@ -1517,9 +1780,19 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .text-slate-500 {
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
+}
+
+.text-slate-950 {
+  --tw-text-opacity: 1;
+  color: rgb(2 6 23 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1535,6 +1808,25 @@ video {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline {
+  outline-style: solid;
+}
+
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.placeholder\:text-white::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-white::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:bg-\[\#205748\]:hover {
@@ -1557,6 +1849,10 @@ video {
   background-color: rgb(126 187 170 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#7ebbaacc\]:hover {
+  background-color: #7ebbaacc;
+}
+
 .hover\:bg-\[\#D7EFFF\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(215 239 255 / var(--tw-bg-opacity));
@@ -1572,16 +1868,6 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[\#F0FEF8\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 254 248 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
 .hover\:text-\[\#276B58\]:hover {
   --tw-text-opacity: 1;
   color: rgb(39 107 88 / var(--tw-text-opacity));
@@ -1590,16 +1876,6 @@ video {
 .hover\:text-\[\#defdfb\]:hover {
   --tw-text-opacity: 1;
   color: rgb(222 253 251 / var(--tw-text-opacity));
-}
-
-.hover\:text-\[\#D7EFFF\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(215 239 255 / var(--tw-text-opacity));
-}
-
-.hover\:text-\[\#99E0FF\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(153 224 255 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -1622,12 +1898,12 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:mr-0 {
-    margin-right: 0px;
-  }
-
   .sm\:flex {
     display: flex;
+  }
+
+  .sm\:min-h-\[50rem\] {
+    min-height: 50rem;
   }
 
   .sm\:w-9\/12 {
@@ -1644,8 +1920,16 @@ video {
     top: 6rem;
   }
 
+  .md\:top-52 {
+    top: 13rem;
+  }
+
   .md\:top-8 {
     top: 2rem;
+  }
+
+  .md\:ml-0 {
+    margin-left: 0px;
   }
 
   .md\:ml-10 {
@@ -1680,16 +1964,24 @@ video {
     margin-left: 22rem;
   }
 
-  .md\:ml-\[30rem\] {
-    margin-left: 30rem;
-  }
-
   .md\:mr-6 {
     margin-right: 1.5rem;
   }
 
   .md\:mt-0 {
     margin-top: 0px;
+  }
+
+  .md\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .md\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .md\:mt-40 {
+    margin-top: 10rem;
   }
 
   .md\:mt-\[2px\] {
@@ -1720,6 +2012,14 @@ video {
     max-height: 350px;
   }
 
+  .md\:max-h-\[40rem\] {
+    max-height: 40rem;
+  }
+
+  .md\:min-h-\[36rem\] {
+    min-height: 36rem;
+  }
+
   .md\:min-h-\[72\] {
     min-height: 72;
   }
@@ -1736,12 +2036,32 @@ video {
     width: 28rem;
   }
 
+  .md\:w-\[7rem\] {
+    width: 7rem;
+  }
+
+  .md\:w-\[8rem\] {
+    width: 8rem;
+  }
+
+  .md\:w-\[9\.5rem\] {
+    width: 9.5rem;
+  }
+
   .md\:min-w-\[72\] {
     min-width: 72;
   }
 
   .md\:max-w-\[420px\] {
     max-width: 420px;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:justify-evenly {
+    justify-content: space-evenly;
   }
 
   .md\:p-1 {
@@ -1763,6 +2083,14 @@ video {
     padding-bottom: 2rem;
   }
 
+  .md\:pb-3 {
+    padding-bottom: 0.75rem;
+  }
+
+  .md\:pl-3 {
+    padding-left: 0.75rem;
+  }
+
   .md\:text-\[14px\] {
     font-size: 14px;
   }
@@ -1770,9 +2098,34 @@ video {
   .md\:text-\[16px\] {
     font-size: 16px;
   }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:relative {
+    position: relative;
+  }
+
+  .lg\:left-32 {
+    left: 8rem;
+  }
+
+  .lg\:right-36 {
+    right: 9rem;
+  }
+
+  .lg\:top-0 {
+    top: 0px;
+  }
+
+  .lg\:top-40 {
+    top: 10rem;
+  }
+
   .lg\:top-\[130px\] {
     top: 130px;
   }
@@ -1783,6 +2136,10 @@ video {
 
   .lg\:top-\[86px\] {
     top: 86px;
+  }
+
+  .lg\:z-\[1\] {
+    z-index: 1;
   }
 
   .lg\:-mt-16 {
@@ -1797,16 +2154,28 @@ video {
     margin-left: 0px;
   }
 
+  .lg\:ml-16 {
+    margin-left: 4rem;
+  }
+
   .lg\:ml-2 {
     margin-left: 0.5rem;
+  }
+
+  .lg\:ml-3 {
+    margin-left: 0.75rem;
   }
 
   .lg\:ml-6 {
     margin-left: 1.5rem;
   }
 
-  .lg\:ml-\[15rem\] {
-    margin-left: 15rem;
+  .lg\:ml-\[1\.5rem\] {
+    margin-left: 1.5rem;
+  }
+
+  .lg\:ml-\[18rem\] {
+    margin-left: 18rem;
   }
 
   .lg\:ml-\[24px\] {
@@ -1827,6 +2196,18 @@ video {
 
   .lg\:mr-0 {
     margin-right: 0px;
+  }
+
+  .lg\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .lg\:mt-3 {
+    margin-top: 0.75rem;
+  }
+
+  .lg\:mt-40 {
+    margin-top: 10rem;
   }
 
   .lg\:mt-5 {
@@ -1857,8 +2238,16 @@ video {
     height: 64px;
   }
 
+  .lg\:max-h-\[32rem\] {
+    max-height: 32rem;
+  }
+
   .lg\:max-h-\[370px\] {
     max-height: 370px;
+  }
+
+  .lg\:min-h-\[30rem\] {
+    min-height: 30rem;
   }
 
   .lg\:w-48 {
@@ -1875,6 +2264,14 @@ video {
 
   .lg\:w-64 {
     width: 16rem;
+  }
+
+  .lg\:w-\[12rem\] {
+    width: 12rem;
+  }
+
+  .lg\:w-\[18rem\] {
+    width: 18rem;
   }
 
   .lg\:w-\[30rem\] {
@@ -1897,6 +2294,10 @@ video {
     width: 64px;
   }
 
+  .lg\:w-\[78\%\] {
+    width: 78%;
+  }
+
   .lg\:w-\[90\%\] {
     width: 90%;
   }
@@ -1917,8 +2318,25 @@ video {
     flex-shrink: 0;
   }
 
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:justify-normal {
+    justify-content: normal;
+  }
+
+  .lg\:rounded-\[10px\] {
+    border-radius: 10px;
+  }
+
+  .lg\:bg-\[\#276B58\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(39 107 88 / var(--tw-bg-opacity));
   }
 
   .lg\:bg-white {
@@ -1930,6 +2348,23 @@ video {
     padding: 0.5rem;
   }
 
+  .lg\:p-4 {
+    padding: 1rem;
+  }
+
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .lg\:pl-5 {
+    padding-left: 1.25rem;
+  }
+
+  .lg\:text-\[1\.6rem\] {
+    font-size: 1.6rem;
+  }
+
   .lg\:text-\[10px\] {
     font-size: 10px;
   }
@@ -1937,15 +2372,31 @@ video {
   .lg\:text-\[12px\] {
     font-size: 12px;
   }
+
+  .lg\:text-\[16px\] {
+    font-size: 16px;
+  }
 }
 
 @media (min-width: 1280px) {
+  .xl\:top-44 {
+    top: 11rem;
+  }
+
   .xl\:ml-10 {
     margin-left: 2.5rem;
   }
 
   .xl\:ml-2 {
     margin-left: 0.5rem;
+  }
+
+  .xl\:ml-3 {
+    margin-left: 0.75rem;
+  }
+
+  .xl\:ml-5 {
+    margin-left: 1.25rem;
   }
 
   .xl\:ml-8 {
@@ -2032,8 +2483,16 @@ video {
     max-height: 330px;
   }
 
+  .xl\:max-h-\[34rem\] {
+    max-height: 34rem;
+  }
+
   .xl\:max-h-\[370px\] {
     max-height: 370px;
+  }
+
+  .xl\:min-h-\[30rem\] {
+    min-height: 30rem;
   }
 
   .xl\:w-48 {
@@ -2050,6 +2509,10 @@ video {
 
   .xl\:w-\[52\%\] {
     width: 52%;
+  }
+
+  .xl\:w-\[80\%\] {
+    width: 80%;
   }
 
   .xl\:min-w-\[42rem\] {
@@ -2088,23 +2551,35 @@ video {
     padding: 1rem;
   }
 
+  .xl\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .xl\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .xl\:pl-5 {
+    padding-left: 1.25rem;
+  }
+
+  .xl\:text-\[1\.7rem\] {
+    font-size: 1.7rem;
+  }
+
   .xl\:text-\[14px\] {
     font-size: 14px;
+  }
+
+  .xl\:text-\[16px\] {
+    font-size: 16px;
   }
 
   .xl\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .xl\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .xl\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
   }
 }
 
@@ -2133,6 +2608,10 @@ video {
     width: 60rem;
   }
 
+  .\32xl\:w-\[84\%\] {
+    width: 84%;
+  }
+
   .\32xl\:min-w-\[58\%\] {
     min-width: 58%;
   }
@@ -2143,6 +2622,15 @@ video {
 
   .\32xl\:flex-shrink-0 {
     flex-shrink: 0;
+  }
+
+  .\32xl\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .\32xl\:text-\[18px\] {
+    font-size: 18px;
   }
 }
 
