--- a/Front - Proyecto/src/Biologo/output.css
+++ b/Front - Proyecto/src/Biologo/output.css
@@ -556,6 +556,10 @@ video {
   visibility: hidden;
 }
 
+.static {
+  position: static;
+}
+
 .fixed {
   position: fixed;
 }
@@ -656,6 +660,10 @@ video {
   top: 4rem;
 }
 
+.left-4 {
+  left: 1rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -690,6 +698,10 @@ video {
 
 .float-right {
   float: right;
+}
+
+.float-left {
+  float: left;
 }
 
 .m-0 {
@@ -739,10 +751,6 @@ video {
 
 .-ml-6 {
   margin-left: -1.5rem;
-}
-
-.-ml-80 {
-  margin-left: -20rem;
 }
 
 .-ml-\[6px\] {
@@ -953,6 +961,10 @@ video {
   margin-top: 1.75rem;
 }
 
+.mt-72 {
+  margin-top: 18rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
 }
@@ -983,6 +995,14 @@ video {
 
 .mt-\[9\.6rem\] {
   margin-top: 9.6rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
 }
 
 .box-border {
@@ -1105,10 +1125,6 @@ video {
   height: 300px;
 }
 
-.h-\[42px\] {
-  height: 42px;
-}
-
 .h-\[60px\] {
   height: 60px;
 }
@@ -1217,6 +1233,10 @@ video {
   width: 1.75rem;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
 .w-80 {
   width: 20rem;
 }
@@ -1263,10 +1283,6 @@ video {
 
 .w-\[350px\] {
   width: 350px;
-}
-
-.w-\[42px\] {
-  width: 42px;
 }
 
 .w-\[4rem\] {
@@ -1363,6 +1379,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -1738,6 +1758,11 @@ video {
   font-size: 2rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1941,11 +1966,6 @@ video {
 .hover\:text-\[\#c6d7d2\]:hover {
   --tw-text-opacity: 1;
   color: rgb(198 215 210 / var(--tw-text-opacity));
-}
-
-.hover\:text-\[\#defdfb\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(222 253 251 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -2200,6 +2220,11 @@ video {
     line-height: 1.5rem;
   }
 
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -2352,10 +2377,6 @@ video {
     height: 1.5rem;
   }
 
-  .lg\:h-\[64px\] {
-    height: 64px;
-  }
-
   .lg\:max-h-\[32rem\] {
     max-height: 32rem;
   }
@@ -2410,10 +2431,6 @@ video {
 
   .lg\:w-\[41\%\] {
     width: 41%;
-  }
-
-  .lg\:w-\[64px\] {
-    width: 64px;
   }
 
   .lg\:w-\[78\%\] {
@@ -2502,6 +2519,11 @@ video {
   .lg\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .lg\:text-sm {
