--- a/Front - Proyecto/src/Biologo/output.css
+++ b/Front - Proyecto/src/Biologo/output.css
@@ -556,10 +556,6 @@ video {
   visibility: hidden;
 }
 
-.static {
-  position: static;
-}
-
 .fixed {
   position: fixed;
 }
@@ -574,6 +570,10 @@ video {
 
 .-right-10 {
   right: -2.5rem;
+}
+
+.-right-8 {
+  right: -2rem;
 }
 
 .-top-28 {
@@ -596,6 +596,10 @@ video {
   left: 2.5rem;
 }
 
+.left-16 {
+  left: 4rem;
+}
+
 .left-5 {
   left: 1.25rem;
 }
@@ -606,6 +610,10 @@ video {
 
 .right-3 {
   right: 0.75rem;
+}
+
+.right-36 {
+  right: 9rem;
 }
 
 .top-0 {
@@ -632,6 +640,10 @@ video {
   top: 9rem;
 }
 
+.top-40 {
+  top: 10rem;
+}
+
 .top-48 {
   top: 12rem;
 }
@@ -640,12 +652,20 @@ video {
   top: 2rem;
 }
 
+.top-\[108px\] {
+  top: 108px;
+}
+
 .top-\[13\.3px\] {
   top: 13.3px;
 }
 
 .top-\[14px\] {
   top: 14px;
+}
+
+.top-\[3\.6rem\] {
+  top: 3.6rem;
 }
 
 .top-\[3rem\] {
@@ -660,20 +680,12 @@ video {
   top: 4rem;
 }
 
-.left-4 {
-  left: 1rem;
-}
-
 .z-10 {
   z-index: 10;
 }
 
 .z-20 {
   z-index: 20;
-}
-
-.z-50 {
-  z-index: 50;
 }
 
 .z-\[10\] {
@@ -698,10 +710,6 @@ video {
 
 .float-right {
   float: right;
-}
-
-.float-left {
-  float: left;
 }
 
 .m-0 {
@@ -941,6 +949,10 @@ video {
   margin-top: 0.75rem;
 }
 
+.mt-32 {
+  margin-top: 8rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -959,10 +971,6 @@ video {
 
 .mt-7 {
   margin-top: 1.75rem;
-}
-
-.mt-72 {
-  margin-top: 18rem;
 }
 
 .mt-8 {
@@ -995,14 +1003,6 @@ video {
 
 .mt-\[9\.6rem\] {
   margin-top: 9.6rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
 }
 
 .box-border {
@@ -1125,6 +1125,10 @@ video {
   height: 300px;
 }
 
+.h-\[42px\] {
+  height: 42px;
+}
+
 .h-\[60px\] {
   height: 60px;
 }
@@ -1173,6 +1177,10 @@ video {
   min-height: 100vh;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -1195,6 +1203,10 @@ video {
 
 .w-24 {
   width: 6rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .w-36 {
@@ -1285,8 +1297,16 @@ video {
   width: 350px;
 }
 
+.w-\[42px\] {
+  width: 42px;
+}
+
 .w-\[4rem\] {
   width: 4rem;
+}
+
+.w-\[50\%\] {
+  width: 50%;
 }
 
 .w-\[6\.5rem\] {
@@ -1373,10 +1393,6 @@ video {
   align-items: flex-start;
 }
 
-.items-end {
-  align-items: flex-end;
-}
-
 .items-center {
   align-items: center;
 }
@@ -1407,10 +1423,6 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
-}
-
-.overflow-visible {
-  overflow: visible;
 }
 
 .truncate {
@@ -1642,6 +1654,18 @@ video {
   padding: 0.5;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
+.p-12 {
+  padding: 3rem;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1694,6 +1718,10 @@ video {
 
 .pl-2 {
   padding-left: 0.5rem;
+}
+
+.pl-3 {
+  padding-left: 0.75rem;
 }
 
 .pl-7 {
@@ -1814,6 +1842,10 @@ video {
   color: rgb(48 47 47 / var(--tw-text-opacity));
 }
 
+.text-\[\#57D7B4F0\] {
+  color: #57D7B4F0;
+}
+
 .text-\[\#FFFFFF\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1905,11 +1937,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:bg-\[\#205748\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(32 87 72 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-\[\#2e5c5c\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(46 92 92 / var(--tw-bg-opacity));
@@ -1968,6 +1995,11 @@ video {
   color: rgb(198 215 210 / var(--tw-text-opacity));
 }
 
+.hover\:text-\[\#defdfb\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(222 253 251 / var(--tw-text-opacity));
+}
+
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
@@ -1993,6 +2025,10 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:ml-16 {
+    margin-left: 4rem;
+  }
+
   .sm\:flex {
     display: flex;
   }
@@ -2051,20 +2087,12 @@ video {
     margin-left: 16rem;
   }
 
-  .md\:ml-\[20rem\] {
-    margin-left: 20rem;
-  }
-
   .md\:ml-\[21rem\] {
     margin-left: 21rem;
   }
 
   .md\:ml-\[22rem\] {
     margin-left: 22rem;
-  }
-
-  .md\:ml-\[30rem\] {
-    margin-left: 30rem;
   }
 
   .md\:mr-6 {
@@ -2305,10 +2333,6 @@ video {
     margin-left: 1.5rem;
   }
 
-  .lg\:ml-\[15rem\] {
-    margin-left: 15rem;
-  }
-
   .lg\:ml-\[18rem\] {
     margin-left: 18rem;
   }
@@ -2377,6 +2401,10 @@ video {
     height: 1.5rem;
   }
 
+  .lg\:h-\[64px\] {
+    height: 64px;
+  }
+
   .lg\:max-h-\[32rem\] {
     max-height: 32rem;
   }
@@ -2421,16 +2449,16 @@ video {
     width: 30rem;
   }
 
-  .lg\:w-\[32rem\] {
-    width: 32rem;
-  }
-
   .lg\:w-\[350px\] {
     width: 350px;
   }
 
   .lg\:w-\[41\%\] {
     width: 41%;
+  }
+
+  .lg\:w-\[64px\] {
+    width: 64px;
   }
 
   .lg\:w-\[78\%\] {
@@ -2500,6 +2528,11 @@ video {
     padding-left: 1.25rem;
   }
 
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:text-\[1\.6rem\] {
     font-size: 1.6rem;
   }
@@ -2541,10 +2574,6 @@ video {
     margin-left: 2.5rem;
   }
 
-  .xl\:ml-2 {
-    margin-left: 0.5rem;
-  }
-
   .xl\:ml-3 {
     margin-left: 0.75rem;
   }
@@ -2561,10 +2590,6 @@ video {
     margin-left: 24px;
   }
 
-  .xl\:ml-\[30rem\] {
-    margin-left: 30rem;
-  }
-
   .xl\:ml-\[31rem\] {
     margin-left: 31rem;
   }
@@ -2579,10 +2604,6 @@ video {
 
   .xl\:mr-10 {
     margin-right: 2.5rem;
-  }
-
-  .xl\:mr-2 {
-    margin-right: 0.5rem;
   }
 
   .xl\:mt-12 {
