--- a/Front - Proyecto/src/Biologo/output.css
+++ b/Front - Proyecto/src/Biologo/output.css
@@ -632,10 +632,6 @@ video {
   top: 7rem;
 }
 
-.top-32 {
-  top: 8rem;
-}
-
 .top-36 {
   top: 9rem;
 }
@@ -735,6 +731,11 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .-ml-32 {
@@ -889,6 +890,10 @@ video {
   margin-left: 9rem;
 }
 
+.mr-0 {
+  margin-right: 0px;
+}
+
 .mr-1 {
   margin-right: 0.25rem;
 }
@@ -979,10 +984,6 @@ video {
 
 .mt-\[2px\] {
   margin-top: 2px;
-}
-
-.mt-\[3px\] {
-  margin-top: 3px;
 }
 
 .mt-\[4px\] {
@@ -1341,6 +1342,18 @@ video {
   width: 100vw;
 }
 
+.w-20 {
+  width: 5rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-\[2rem\] {
+  width: 2rem;
+}
+
 .min-w-full {
   min-width: 100%;
 }
@@ -1355,10 +1368,6 @@ video {
 
 .max-w-\[280px\] {
   max-width: 280px;
-}
-
-.max-w-\[40rem\] {
-  max-width: 40rem;
 }
 
 .max-w-md {
@@ -1652,18 +1661,6 @@ video {
 
 .p-\[0\.5\] {
   padding: 0.5;
-}
-
-.p-8 {
-  padding: 2rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
-}
-
-.p-12 {
-  padding: 3rem;
 }
 
 .px-10 {
@@ -2033,6 +2030,10 @@ video {
     display: flex;
   }
 
+  .sm\:hidden {
+    display: none;
+  }
+
   .sm\:min-h-\[38rem\] {
     min-height: 38rem;
   }
@@ -2103,20 +2104,12 @@ video {
     margin-top: 0px;
   }
 
-  .md\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
   .md\:mt-2 {
     margin-top: 0.5rem;
   }
 
   .md\:mt-40 {
     margin-top: 10rem;
-  }
-
-  .md\:mt-\[2px\] {
-    margin-top: 2px;
   }
 
   .md\:block {
@@ -2129,10 +2122,6 @@ video {
 
   .md\:hidden {
     display: none;
-  }
-
-  .md\:h-6 {
-    height: 1.5rem;
   }
 
   .md\:h-auto {
@@ -2161,10 +2150,6 @@ video {
 
   .md\:min-h-\[72\] {
     min-height: 72;
-  }
-
-  .md\:w-6 {
-    width: 1.5rem;
   }
 
   .md\:w-\[22rem\] {
@@ -2205,6 +2190,10 @@ video {
 
   .md\:p-1 {
     padding: 0.25rem;
+  }
+
+  .md\:p-4 {
+    padding: 1rem;
   }
 
   .md\:px-10 {
@@ -2269,8 +2258,16 @@ video {
     position: relative;
   }
 
+  .lg\:left-20 {
+    left: 5rem;
+  }
+
   .lg\:left-32 {
     left: 8rem;
+  }
+
+  .lg\:right-20 {
+    right: 5rem;
   }
 
   .lg\:right-36 {
@@ -2325,10 +2322,6 @@ video {
     margin-left: 0.75rem;
   }
 
-  .lg\:ml-6 {
-    margin-left: 1.5rem;
-  }
-
   .lg\:ml-\[1\.5rem\] {
     margin-left: 1.5rem;
   }
@@ -2381,10 +2374,6 @@ video {
     margin-top: 1.25rem;
   }
 
-  .lg\:mt-\[4px\] {
-    margin-top: 4px;
-  }
-
   .lg\:block {
     display: block;
   }
@@ -2395,10 +2384,6 @@ video {
 
   .lg\:h-10 {
     height: 2.5rem;
-  }
-
-  .lg\:h-6 {
-    height: 1.5rem;
   }
 
   .lg\:h-\[64px\] {
@@ -2417,16 +2402,16 @@ video {
     min-height: 30rem;
   }
 
+  .lg\:w-14 {
+    width: 3.5rem;
+  }
+
   .lg\:w-48 {
     width: 12rem;
   }
 
   .lg\:w-5\/6 {
     width: 83.333333%;
-  }
-
-  .lg\:w-6 {
-    width: 1.5rem;
   }
 
   .lg\:w-64 {
@@ -2455,6 +2440,10 @@ video {
 
   .lg\:w-\[41\%\] {
     width: 41%;
+  }
+
+  .lg\:w-\[52\%\] {
+    width: 52%;
   }
 
   .lg\:w-\[64px\] {
@@ -2563,6 +2552,11 @@ video {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
+
+  .lg\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
 }
 
 @media (min-width: 1280px) {
@@ -2580,10 +2574,6 @@ video {
 
   .xl\:ml-5 {
     margin-left: 1.25rem;
-  }
-
-  .xl\:ml-8 {
-    margin-left: 2rem;
   }
 
   .xl\:ml-\[24px\] {
@@ -2638,10 +2628,6 @@ video {
     height: 2.5rem;
   }
 
-  .xl\:h-6 {
-    height: 1.5rem;
-  }
-
   .xl\:h-\[170px\] {
     height: 170px;
   }
@@ -2652,10 +2638,6 @@ video {
 
   .xl\:h-\[380px\] {
     height: 380px;
-  }
-
-  .xl\:max-h-\[330px\] {
-    max-height: 330px;
   }
 
   .xl\:max-h-\[34rem\] {
@@ -2670,12 +2652,12 @@ video {
     min-height: 30rem;
   }
 
-  .xl\:w-48 {
-    width: 12rem;
+  .xl\:w-20 {
+    width: 5rem;
   }
 
-  .xl\:w-6 {
-    width: 1.5rem;
+  .xl\:w-48 {
+    width: 12rem;
   }
 
   .xl\:w-\[32rem\] {
@@ -2696,10 +2678,6 @@ video {
 
   .xl\:min-w-\[54rem\] {
     min-width: 54rem;
-  }
-
-  .xl\:max-w-\[420px\] {
-    max-width: 420px;
   }
 
   .xl\:max-w-\[490px\] {
@@ -2742,10 +2720,6 @@ video {
 
   .xl\:text-\[1\.7rem\] {
     font-size: 1.7rem;
-  }
-
-  .xl\:text-\[14px\] {
-    font-size: 14px;
   }
 
   .xl\:text-\[16px\] {
